fix hear icon css not showing properly in production

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,7 +89,7 @@ body {
     }
 
     #heart::before {
-        left: 29;
+        left: 55;
         transform: rotate(-52deg);
         transform-origin: 0 100%;
     }
